--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,21 +12,24 @@
         <div class="col-md-6 offset-md-3 text-center">
             <h1>Welcome to Quiz Application</h1>
             <p>Test your knowledge with our quiz!</p>
-            <a th:href="@{/quiz/list}" class="btn btn-primary">Quiz List</a>
+            <a th:href="@{/quiz/create}" class="btn btn-primary">Add Quiz</a>
+
+
         </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-4 mb-4" th:each="quiz:${quizList}">
-        <div class="card">
-            <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Category 1">
-            <div class="card-body">
-                <h5 class="card-title" th:text="${quiz.title}"></h5>
-                <p class="card-text" th:text="${quiz.description}"></p>
-                <a th:href="@{/quiz/start/{id}(id=${quiz.id})}" class="btn btn-primary">Start Quiz</a>
+    <div class="row">
+        <div class="col-md-4 mb-4" th:each="quiz:${quizList}">
+            <div class="card">
+                <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Category 1">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${quiz.title}"></h5>
+                    <p class="card-text" th:text="${quiz.description}"></p>
+                    <a th:href="@{/quiz/start/{id}(id=${quiz.id})}" class="btn btn-primary">Start Quiz</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 </body>
 </html>
